# web-gs-editor

./: .gitignore  .gitmodules  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
assets/: app-a9zLmAz3.js  index-9lczqhZr.js  index-BpVEzkeq.css  index-COae_x0G.js  test-CAZFaM1v.wasm  test-Cxcm5jnO.js
docs/: architecture.md  development-plan-basic-viewer.md  editor-design.md  github-pages-deployment.md  naming-conventions.md  shader-conventions.md  vue-setup.md
metadocs/: doc-rules.md
src/: App.vue  style.css  vite-env.d.ts
src/components/: EditorLayout.vue  EditorToolbar.vue  HelloWorld.vue  HierarchyPanel.vue  InspectorPanel.vue  PropertyEditor.vue  ResizablePanel.vue  StatusBar.vue  TreeNode.vue  ViewportCanvas.vue  WasmWebGPUTriangle.vue  WebGPUTriangle.vue
src/composables/: useResize.ts  useSelection.ts
src/core/gsr/: entity.ts  gsr.ts  scene.ts
src/core/wasm/: EmscriptenWasmModule.ts
src/stores/: editor.ts  scene.ts  test.ts  ui.ts
src/types/: editor.ts
wasm/: CMakeLists.txt  build.bat
wasm/src/: WebGPUContext.h  main.cpp  test.cpp
wasm/src/gsr/: Camera.cpp  Camera.h  EntMesh.cpp  EntMesh.h  Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderBinding.h  ShaderParser.cpp  ShaderParser.h  Transform.cpp  Transform.h  VertexAttribute.cpp  VertexAttribute.h  WebGPUContext.cpp  WebGPUContext.h  main.cpp
wasm/src/gsr/shaders/: triangle.wgsl.h  vertexcolor.wgsl.h  vertexcolor2d.wgsl.h
